--- a/index.html
+++ b/index.html
@@ -1,11 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link href="styles.css" rel="stylesheet" />
+
     <title>Document</title>
-</head>
-<body>
-    <div class="">123214533</div>
-</body>
+  </head>
+  <body>
+      <section class="all-cards">
+          
+          <div class="card">
+              <img class="front-face" src="https://placekitten.com/200/300" />
+              <img class="back-face" />
+            </div>
+          <div class="card">
+              <img class="front-face" src="https://placekitten.com/200/300" />
+              <img class="back-face" />
+            </div>
+          <div class="card">
+              <img class="front-face" src="https://placekitten.com/200/300" />
+              <img class="back-face" />
+            </div>
+          <div class="card">
+              <img class="front-face" src="https://placekitten.com/200/300" />
+              <img class="back-face" />
+            </div>
+          <div class="card">
+              <img class="front-face" src="https://placekitten.com/200/300" />
+              <img class="back-face" />
+            </div>
+          <div class="card">
+              <img class="front-face" src="https://placekitten.com/200/300" />
+              <img class="back-face" />
+            </div>
+          <div class="card">
+              <img class="front-face" src="https://placekitten.com/200/300" />
+              <img class="back-face" />
+            </div>
+          <div class="card">
+              <img class="front-face" src="https://placekitten.com/200/300" />
+              <img class="back-face" />
+            </div>
+          <div class="card">
+              <img class="front-face" src="https://placekitten.com/200/300" />
+              <img class="back-face" />
+            </div>
+          <div class="card">
+              <img class="front-face" src="https://placekitten.com/200/300" />
+              <img class="back-face" />
+            </div>
+          <div class="card">
+              <img class="front-face" src="https://placekitten.com/200/300" />
+              <img class="back-face" />
+            </div>
+          <div class="card">
+              <img class="front-face" src="https://placekitten.com/200/300" />
+              <img class="back-face" />
+            </div>
+        </section>
+
+    <script src="script.js"></script>
+  </body>
 </html>
