game finished, counter is started

--- a/index.html
+++ b/index.html
@@ -9,54 +9,58 @@
     <title>Document</title>
   </head>
   <body>
+
+    <div class="counter">
+        Время: <span id="seconds">00</span>.<span id="tens">00</span>
+    </div>
       <section class="all-cards">
           
-          <div class="card">
-              <img class="front-face" src="https://placekitten.com/200/300" />
+          <div class="one-card" data-face="first">
+              <img class="front-face" src="https://placekitten.com/200/300?image=1" />
               <img class="back-face" />
             </div>
-          <div class="card">
-              <img class="front-face" src="https://placekitten.com/200/300" />
+          <div class="one-card" data-face="first"> 
+              <img class="front-face" src="https://placekitten.com/200/300?image=1" />
               <img class="back-face" />
             </div>
-          <div class="card">
-              <img class="front-face" src="https://placekitten.com/200/300" />
+          <div class="one-card" data-face="second">
+              <img class="front-face" src="https://placekitten.com/200/300?image=10" />
               <img class="back-face" />
             </div>
-          <div class="card">
-              <img class="front-face" src="https://placekitten.com/200/300" />
+          <div class="one-card" data-face="second">
+              <img class="front-face" src="https://placekitten.com/200/300?image=10" />
               <img class="back-face" />
             </div>
-          <div class="card">
-              <img class="front-face" src="https://placekitten.com/200/300" />
+          <div class="one-card" data-face="third">
+              <img class="front-face" src="https://placekitten.com/200/300?image=11" />
               <img class="back-face" />
             </div>
-          <div class="card">
-              <img class="front-face" src="https://placekitten.com/200/300" />
+          <div class="one-card" data-face="third">
+              <img class="front-face" src="https://placekitten.com/200/300?image=11" />
               <img class="back-face" />
             </div>
-          <div class="card">
-              <img class="front-face" src="https://placekitten.com/200/300" />
+          <div class="one-card" data-face="fourth">
+              <img class="front-face" src="https://placekitten.com/200/300?image=12" />
               <img class="back-face" />
             </div>
-          <div class="card">
-              <img class="front-face" src="https://placekitten.com/200/300" />
+          <div class="one-card" data-face="fourth">
+              <img class="front-face" src="https://placekitten.com/200/300?image=12" />
               <img class="back-face" />
             </div>
-          <div class="card">
-              <img class="front-face" src="https://placekitten.com/200/300" />
+          <div class="one-card" data-face="fifth">
+              <img class="front-face" src="https://placekitten.com/200/300?image=14" />
               <img class="back-face" />
             </div>
-          <div class="card">
-              <img class="front-face" src="https://placekitten.com/200/300" />
+          <div class="one-card" data-face="fifth">
+              <img class="front-face" src="https://placekitten.com/200/300?image=14" />
               <img class="back-face" />
             </div>
-          <div class="card">
-              <img class="front-face" src="https://placekitten.com/200/300" />
+          <div class="one-card" data-face="sixth">
+              <img class="front-face" src="https://placekitten.com/200/300?image=16" />
               <img class="back-face" />
             </div>
-          <div class="card">
-              <img class="front-face" src="https://placekitten.com/200/300" />
+          <div class="one-card" data-face="sixth">
+              <img class="front-face" src="https://placekitten.com/200/300?image=16" />
               <img class="back-face" />
             </div>
         </section>
